# Flask_lvl6

./: .gitignore  MANIFEST.in  config.py  copy_project.py  pyproject.toml  wsgi.py
flaskr/: __init__.py  auth.py  blog.py  db.py  errors.py  schema.sql
flaskr/static/: style.css
flaskr/templates/: base.html
flaskr/templates/auth/: login.html  register.html
flaskr/templates/blog/: create.html  index.html  update.html
flaskr/templates/errors/: 403.html  404.html  500.html
